test/Runner/errors/tests/Hook/Hook2.runtime.js
seed("Seed", () => {});
beforeSeed(async () => {
	await new Promise(() => {
		throw new Error();
	})
});